## Process this file with automake to produce Makefile.in

## Created by Anjuta

uidir = @UIDATADIR@
ui_DATA = \
	installation-report-logo.bmp \
	LogPrintDocumentHeader.img \
	ContingencyReportHeader.img \
	qrbkground.bmp \
	printer-test-logo-direct.bmp \
	printer-test-logo-gtk.bmp \
	barcode-reader-configuration-direct.pdf \
	barcode-reader-configuration-gtk.pdf

EXTRA_DIST = $(ui_DATA)

